<resources>
    <string name="app_name">Mini-fadfed</string>
    <string name="your_name">Your name</string>
    <string name="must_be_at_least_3_characters">Must be at least 3 characters</string>
    <string name="your_gender">Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="by_continuing_you_agree_to_the_terms_and_conditions"><u>By continuing, you agree to the terms and conditions</u></string>
    <string name="continue_txt">Continue</string>
    <string name="may_you_live_among_us">May you live among us</string>
    <string name="find_a_friend">Find a friend</string>
    <string name="everyone">Everyone</string>
    <string name="choosen_with">Choosen with:</string>
    <string name="leave">Leave</string>
    <string name="accept">Accept</string>
    <string name="match_found">Match found!</string>
    <string name="user_name">User name</string>
    <string name="transgression">Transgression</string>
    <string name="report">Report</string>
    <string name="addition">Addition</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send Message</string>
</resources>