<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.example.mini_fadfed.data.remote.GenderReq" />
        <variable
            name="gender"
            type="com.example.mini_fadfed.data.remote.GenderReq" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".ui.activity.HomeScreenActivity">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/find_a_friend" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choosen_with"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            style="@style/TextMedium"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/llGenderSelection"
            />


        <LinearLayout
            android:id="@+id/llGenderSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivMale"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_male_default"
                    app:layout_constraintEnd_toStartOf="@id/ivFemale"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/arabicui_text_medium"
                    android:text="@string/male"
                    app:layout_constraintEnd_toEndOf="@id/ivMale"
                    app:layout_constraintStart_toStartOf="@id/ivMale"
                    app:layout_constraintTop_toBottomOf="@id/ivMale" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivBoth"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="12dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_both_gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivMale"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/arabicui_text_medium"
                    android:text="@string/everyone"
                    app:layout_constraintEnd_toEndOf="@id/ivMale"
                    app:layout_constraintStart_toStartOf="@id/ivMale"
                    app:layout_constraintTop_toBottomOf="@id/ivMale" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivFemale"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_female_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivMale"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/arabicui_text_medium"
                    android:text="@string/female"
                    app:layout_constraintEnd_toEndOf="@id/ivMale"
                    app:layout_constraintStart_toStartOf="@id/ivMale"
                    app:layout_constraintTop_toBottomOf="@id/ivMale" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact"
                />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="4dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                />

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chat"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>